/*
 *  LICENSE
 *  DiscordSRVUtils
 *  -------------
 *  Copyright (C) 2020 - 2021 BlueTree242
 *  -------------
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as
 *  published by the Free Software Foundation, either version 3 of the
 *  License, or (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public
 *  License along with this program.  If not, see
 *  <http://www.gnu.org/licenses/gpl-3.0.html>.
 *  END
 */
import org.apache.tools.ant.filters.ReplaceTokens

plugins {
    id 'java'
    id 'maven-publish'
    id 'com.github.johnrengelman.shadow' version '6.1.0'
}
compileJava.options.encoding 'UTF-8'
allprojects {
    repositories {
        mavenLocal()
        mavenCentral()
        jcenter()
        maven {
            url = uri('https://repo.citizensnpcs.co')
        }
        maven {
            url = uri('https://nexus.vankka.dev/repository/maven-public/')
        }
        maven {
            url = uri('http://repo.extendedclip.com/content/repositories/placeholderapi/')
        }

        maven {
            url = uri('https://jitpack.io')
        }

        maven {
            url = uri('https://repo.codemc.org/repository/maven-public')
        }

        maven {
            url = uri('https://ci.ender.zone/plugin/repository/everything/')
        }

        maven {
            url = uri('https://papermc.io/repo/repository/maven-public/')
        }

        maven {
            url = uri('https://nexus.scarsz.me/content/groups/public/')
        }

        maven {
            url = uri('https://hub.spigotmc.org/nexus/content/repositories/snapshots/')
        }

        maven {
            url = uri("https://papermc.io/repo/repository/maven-public/")
        }

        maven {
            name = "sonatype-oss-snapshots"
            url = "https://oss.sonatype.org/content/repositories/snapshots/"
        }

        maven {
            url = uri('https://repo.maven.apache.org/maven2/')
        }
        maven {
            name 'm2-dv8tion'
            url 'https://m2.dv8tion.net/releases'
        }
        maven { url "https://mvn-repo.arim.space/affero-gpl3" }
        maven { url "https://mvn-repo.arim.space/gpl3" }
        maven { url "https://mvn-repo.arim.space/lesser-gpl3" }
    }
}

allprojects {
    apply plugin: 'java'
    dependencies {
        compileOnly 'org.projectlombok:lombok:1.18.22'
        annotationProcessor 'org.projectlombok:lombok:1.18.22'

        testCompileOnly 'org.projectlombok:lombok:1.18.22'
        testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
    }
}
def buildNumber = project.properties['buildNumber'] == null ? "NONE" : project.properties['buildNumber']
System.out.println("Build Number is " + buildNumber)
def commit = project.properties['commit'] == null ? "NONE" : project.properties['commit']
System.out.println("Commit Hash is " + commit)
subprojects {
    apply plugin: 'java'
    apply plugin: 'maven'
    apply plugin: 'maven-publish'
    project.jar {
        archivesBaseName = 'DiscordSRVUtils-' + project.name
    }
    project.processResources {
        from(sourceSets.main.resources.srcDirs) {
            filter ReplaceTokens, tokens: [version    : version,
                                           build      : buildNumber,
                                           commit     : commit,
                                           description: description,
                                           buildDate  : System.currentTimeMillis() + ""
            ]
        }

    }

}
shadowJar {
    classifier ''
}
dependencies {
    implementation project(":bukkit")
}
publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}


java.sourceCompatibility = JavaVersion.VERSION_1_8
java.targetCompatibility = JavaVersion.VERSION_1_8



